# Deal_Viewer

./: README.md
back/: pyproject.toml
back/src/deal_viewer/: main.py
back/src/deal_viewer/controllers/: get_deal_adapter.py
back/src/deal_viewer/models/: deal_model.py
back/src/deal_viewer/routes/: deal_router.py  get_deal.py  health_check.py  template_router.py
back/src/deal_viewer/schemas/: deal_schema.py
back/src/deal_viewer/services/: deal_service.py  template_service.py
back/src/deal_viewer/utils/: deal_validator.py
